traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:3: error: value unary_! is not a member of Unit
  while (!positionFinale())
         ^TraversalByColumn:30: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      {return(true);}
              ^TraversalByColumn:30: warning: enclosing method positionFinale has result type Unit: return value discarded
      {return(true);}
       ^TraversalByColumn:31: error: Boolean(false) does not take parameters
  return(false());} 
              ^TraversalByColumn:31: warning: enclosing method positionFinale has result type Unit: return value discarded
  return(false());} 
  ^